<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>sparkly</groupId>
	<artifactId>sparkly</artifactId>
	<version>0.10-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Sparkly</name>

	<properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>

		<!-- Trick to release distribution locally -->
		<altDeploymentRepository>release-repo::default::file:../../releases</altDeploymentRepository>

		<!-- Main dependencies version -->
		<scala.version>2.10</scala.version>
		<spark.version>1.4.0</spark.version>
		<jetty.version>8.1.14.v20131031</jetty.version>
    	<jackson.version>1.9.11</jackson.version>
		<json4s.version>3.2.10</json4s.version>
		<slf4j.version>1.7.5</slf4j.version>
		<spark-cassandra-connector>1.4.0-M1</spark-cassandra-connector>
	</properties>

	<modules>
		<module>math</module>
		<module>core</module>
		<module>component</module>
		<module>ui</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<!-- Sparkly -->
			<dependency>
				<groupId>sparkly</groupId>
				<artifactId>sparkly-math</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>sparkly</groupId>
				<artifactId>sparkly-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>sparkly</groupId>
				<artifactId>sparkly-component</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>sparkly</groupId>
				<artifactId>sparkly-ui</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Spark -->
			<dependency>
				<groupId>org.apache.spark</groupId>
				<artifactId>spark-core_${scala.version}</artifactId>
				<version>${spark.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.spark</groupId>
				<artifactId>spark-sql_${scala.version}</artifactId>
				<version>${spark.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.spark</groupId>
				<artifactId>spark-streaming_${scala.version}</artifactId>
				<version>${spark.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.spark</groupId>
				<artifactId>spark-streaming-twitter_${scala.version}</artifactId>
				<version>${spark.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.spark</groupId>
				<artifactId>spark-streaming-kafka_${scala.version}</artifactId>
				<version>${spark.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.spark</groupId>
				<artifactId>spark-mllib_${scala.version}</artifactId>
				<version>${spark.version}</version>
			</dependency>

			<!-- Spark libs-->
			<dependency>
				<groupId>com.datastax.spark</groupId>
				<artifactId>spark-cassandra-connector_${scala.version}</artifactId>
				<version>${spark-cassandra-connector}</version>
				<exclusions>
					<exclusion>
						<groupId>org.apache.spark</groupId>
						<artifactId>spark-streaming_${scala.version}</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- ES Client -->
			<dependency>
				<groupId>com.sksamuel.elastic4s</groupId>
				<artifactId>elastic4s_${scala.version}</artifactId>
				<version>1.4.12</version>
			</dependency>

			<!-- Kafka -->
			<dependency>
				<groupId>org.apache.kafka</groupId>
				<artifactId>kafka_${scala.version}</artifactId>
				<version>0.8.2.1</version>
				<exclusions>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-simple</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper</artifactId>
				<version>3.4.5</version>
				<exclusions>
					<exclusion>
						<artifactId>netty</artifactId>
						<groupId>org.jboss.netty</groupId>
					</exclusion>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- Persistence -->
			<dependency>
				<groupId>org.mapdb</groupId>
				<artifactId>mapdb</artifactId>
				<version>1.0.6</version>
			</dependency>

			<!-- Scalatra -->
			<dependency>
				<groupId>org.scalatra</groupId>
				<artifactId>scalatra_${scala.version}</artifactId>
				<version>2.3.0</version>
			</dependency>
			<dependency>
				<groupId>org.scalatra</groupId>
				<artifactId>scalatra-atmosphere_${scala.version}</artifactId>
				<version>2.3.0</version>
				<exclusions>
					<exclusion>
						<groupId>com.typesafe.akka</groupId>
						<artifactId>akka-actor_${scala.version}</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.scalatra</groupId>
				<artifactId>scalatra-json_${scala.version}</artifactId>
				<version>2.3.0</version>
			</dependency>
			<dependency>
				<groupId>org.atmosphere</groupId>
				<artifactId>wasync</artifactId>
				<version>1.4.0</version>
			</dependency>

			<!-- JSON -->
			<dependency>
				<groupId>org.json4s</groupId>
				<artifactId>json4s-native_${scala.version}</artifactId>
				<version>${json4s.version}</version>
			</dependency>
			<dependency>
				<groupId>org.json4s</groupId>
				<artifactId>json4s-jackson_${scala.version}</artifactId>
				<version>${json4s.version}</version>
			</dependency>
			<dependency>
				<groupId>org.json4s</groupId>
				<artifactId>json4s-core_${scala.version}</artifactId>
				<version>${json4s.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>2.4.4</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.4.4</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.4.4</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-core-asl</artifactId>
				<version>1.9.2</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-mapper-asl</artifactId>
				<version>1.9.2</version>
			</dependency>

			<!-- Jetty -->
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-webapp</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-plus</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-websocket</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
	    		<groupId>org.eclipse.jetty</groupId>
	  			<artifactId>jetty-servlet</artifactId>
				<version>${jetty.version}</version>
			</dependency>


			<!-- Math/Analytics/DM lib -->
			<dependency>
				<groupId>com.twitter</groupId>
				<artifactId>algebird-core_${scala.version}</artifactId>
				<version>0.8.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-math3</artifactId>
				<version>3.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.mahout</groupId>
				<artifactId>mahout-math</artifactId>
				<version>0.9</version>
			</dependency>
			<dependency>
				<groupId>nz.ac.waikato.cms.moa</groupId>
				<artifactId>moa</artifactId>
				<version>2014.04</version>
			</dependency>

			<!-- Utils -->
			<dependency>
				<groupId>com.github.nscala-time</groupId>
				<artifactId>nscala-time_${scala.version}</artifactId>
				<version>1.8.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>16.0</version>
			</dependency>
			<dependency>
				<groupId>com.jsuereth</groupId>
				<artifactId>scala-arm_${scala.version}</artifactId>
				<version>1.3</version>
			</dependency>
			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>0.9.9-RC1</version>
			</dependency>
			<dependency>
				<groupId>io.gatling</groupId>
				<artifactId>jsonpath_${scala.version}</artifactId>
				<version>0.6.2</version>
			</dependency>

			<!-- Logs -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>sparkly</groupId>
				<artifactId>sparkly-core</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.datastax.spark</groupId>
				<artifactId>spark-cassandra-connector-embedded_${scala.version}</artifactId>
				<version>${spark-cassandra-connector}</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<groupId>org.apache.spark</groupId>
						<artifactId>spark-streaming_${scala.version}</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.apache.spark</groupId>
						<artifactId>spark-core_${scala.version}</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.apache.spark</groupId>
						<artifactId>spark-sql_${scala.version}</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.apache.spark</groupId>
						<artifactId>spark-catalyst_${scala.version}</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>1.9.5</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-test</artifactId>
				<version>2.3.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.kafka</groupId>
				<artifactId>kafka_${scala.version}</artifactId>
				<version>0.8.2.1</version>
				<scope>test</scope>
				<classifier>test</classifier>
				<exclusions>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.scalatest</groupId>
				<artifactId>scalatest_${scala.version}</artifactId>
				<version>2.2.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.scalatra</groupId>
				<artifactId>scalatra-scalatest_${scala.version}</artifactId>
				<version>2.3.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>1.4.185</version>
				<scope>test</scope>
			</dependency>

            <!-- Bench -->
            <dependency>
                <groupId>com.storm-enroute</groupId>
                <artifactId>scalameter_2.10</artifactId>
                <version>0.6</version>
                <scope>test</scope>
            </dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<sourceDirectory>src/main/scala</sourceDirectory>
		<testSourceDirectory>src/test/scala</testSourceDirectory>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>net.alchim31.maven</groupId>
					<artifactId>scala-maven-plugin</artifactId>
					<version>3.2.1</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>testCompile</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<sourceDir>src/main/scala</sourceDir>
						<testSourceDir>src/test/scala</testSourceDir>
						<scalaCompatVersion>2.10</scalaCompatVersion>
                        <jvmArgs>
                            <jvmArg>-Xms1024m</jvmArg>
                            <jvmArg>-Xmx1024m</jvmArg>
                        </jvmArgs>
                        <args>
                            <arg>-feature</arg>
                            <arg>-deprecation</arg>
                        </args>
						<scalaVersion>2.10.4</scalaVersion>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.scalatest</groupId>
					<artifactId>scalatest-maven-plugin</artifactId>
					<version>1.0</version>
					<configuration>
						<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
						<junitxml>.</junitxml>
						<filereports>WDF TestSuite.txt</filereports>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					</configuration>
					<executions>
						<execution>
							<id>test</id>
							<goals>
								<goal>test</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.1</version><!--$NO-MVN-MAN-VER$ -->
					<configuration>
						<useReleaseProfile>false</useReleaseProfile>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<scm>
		<connection>scm:git:git@github.com:pmerienne/sparkly.git</connection>
		<developerConnection>scm:git:git@github.com:pmerienne/sparkly.git</developerConnection>
		<url>scm:git:git@github.com:pmerienne/sparkly.git</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<id>release-repo</id>
			<url>https://pmerienne@github.com/pmerienne/sparkly/raw/master/releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshot-repo</id>
			<url>https://pmerienne@github.com/pmerienne/sparkly/raw/master/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

    <repositories>
        <repository>
            <id>bintray.com-meetup</id>
            <url>http://dl.bintray.com/meetup/maven</url>
        </repository>
    </repositories>
</project>
